--- a/src/pages/home/sections/header/styles.sass
+++ b/src/pages/home/sections/header/styles.sass
@@ -2,7 +2,7 @@
   background-image: url("../../../../assets/iconHeader.png")
   background-position: bottom
   background-repeat: no-repeat
-  background-size: 60%
+  background-size: 80%
   .hero-body
     flex-grow: 0
 
